expose TLS security field
